--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org">
 <body>
-    <div style="display: flex; justify-content: center; align-items: center;">
-        <h1>Yo!</h1>
+
+<div th:fragment="content">
+    <div>
+        <h2>Home Page</h2>
+        <p>Welcome to the home page!</p>
     </div>
+</div>
+
 </body>
 </html>
