--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,16 +1,11 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<body>
-<!-- Define a fragment -->
-<div th:fragment="header">
-    <header>
-        <h1>My Awesome Website</h1>
-        <nav>
-            <a th:href="@{/}">Home</a> |
-            <a th:href="@{/blog}">Blog</a>
-        </nav>
-        <hr/>
-    </header>
-</div>
-</body>
-</html>
+<header xmlns:th="http://www.thymeleaf.org" th:fragment="header">
+  <nav class="bg-white shadow-md">
+    <div class="container mx-auto flex justify-between items-center p-4">
+      <a class="text-2xl font-bold text-blue-600" th:href="@{/}">My Blog</a>
+      <div class="flex space-x-4">
+        <a class="text-gray-700 hover:text-blue-600 font-medium transition-colors" th:href="@{/}">Home</a>
+        <a class="text-gray-700 hover:text-blue-600 font-medium transition-colors" th:href="@{/blog}">Blog</a>
+      </div>
+    </div>
+  </nav>
+</header>
