--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,10 +1,10 @@
 <header xmlns:th="http://www.thymeleaf.org" th:fragment="header">
   <nav class="bg-white shadow-md">
     <div class="container mx-auto flex justify-between items-center p-4">
-      <a class="text-2xl font-bold text-blue-600" th:href="@{/}">My Blog</a>
+      <a class="text-2xl font-bold text-blue-600" th:href="@{/}">My Blog App</a>
       <div class="flex space-x-4">
         <a class="text-gray-700 hover:text-blue-600 font-medium transition-colors" th:href="@{/}">Home</a>
-        <a class="text-gray-700 hover:text-blue-600 font-medium transition-colors" th:href="@{/blog}">Blog</a>
+        <a class="text-gray-700 hover:text-blue-600 font-medium transition-colors" th:href="@{/blogs}">Blogs</a>
       </div>
     </div>
   </nav>
