--- a/src/main/resources/templates/pages/addBlog.html
+++ b/src/main/resources/templates/pages/addBlog.html
@@ -8,26 +8,30 @@
 </head>
 <body>
     <section layout:fragment="content"> 
-      <form th:action="@{/blog/add/}" method="post">
+      <form th:action="blog != null ? @{/blogs/edit/{id}(id=${blog.id})} : @{/blogs/add/}" method="post">
         <div class="mb-4">
             <label for="title" class="block text-gray-700 font-medium mb-2">Title:</label>
             <input type="text" id="title" name="title" required 
-                   class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+                   class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
+                   th:value="${blog != null ? blog.title : ''}">
         </div>
         <div class="mb-4">
             <label for="content" class="block text-gray-700 font-medium mb-2">Text:</label>
             <textarea id="content" name="content" rows="5" required 
-                      class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"></textarea>
+                      class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
+                      th:text="${blog != null ? blog.content : ''}"></textarea>
         </div>
         <div class="mb-4">
             <label for="author" class="block text-gray-700 font-medium mb-2">Author:</label>
             <input type="text" id="author" name="author" required 
-                   class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+                   class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
+                   th:value="${blog != null ? blog.author : ''}">
         </div>
         <div class="mb-4">
             <label for="datePublished" class="block text-gray-700 font-medium mb-2">Date:</label>
             <input type="date" id="datePublished" name="datePublished" required 
-                   class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+                   class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
+                   th:value="${blog != null ? blog.datePublished : ''}">
         </div>
         <div>
             <button type="submit" 
