--- a/src/main/resources/templates/pages/home.html
+++ b/src/main/resources/templates/pages/home.html
@@ -9,13 +9,13 @@
 </head>
 <body>
   <section layout:fragment="content">
-    <div class="flex flex-col items-center justify-center py-2">
-      <h1>Welcome to home html</h1>
-      <a class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" th:href="@{/blog/add}">
-        Add new blog!
-      </a>
-
-    </div>
+      <h1 class="text-2xl font-bold text-gray-800 mb-4">Welcome to My Blog App</h1>
+      <p class="text-gray-700 text-lg">Out latest blogs:</p>
+        <ul class="list-disc list-inside">
+          <li th:each="blog : ${blogs}">
+            <a th:href="@{/blogs/{id}(id=${blog.id})}" th:text="${blog.title}"></a>
+          </li>
+        </ul>
   </section>
   <!-- <script layout:fragment="extraScripts" th:src="@{/js/home.js}"></script> -->
 </body>
