--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,6 +5,7 @@
       <div class="flex space-x-4">
         <a class="text-gray-700 hover:text-blue-600 font-medium transition-colors" th:href="@{/}">Home</a>
         <a class="text-gray-700 hover:text-blue-600 font-medium transition-colors" th:href="@{/blogs}">Blogs</a>
+        <a class="text-gray-700 hover:text-blue-600 font-medium transition-colors" th:href="@{/login}">Log In</a>
       </div>
     </div>
   </nav>
