--- a/src/main/resources/templates/pages/home.html
+++ b/src/main/resources/templates/pages/home.html
@@ -9,13 +9,7 @@
 </head>
 <body>
   <section layout:fragment="content">
-      <h1 class="text-2xl font-bold text-gray-800 mb-4">Welcome to My Blog App</h1>
-      <p class="text-gray-700 text-lg">Out latest blogs:</p>
-        <ul class="list-disc list-inside">
-          <li th:each="blog : ${blogs}">
-            <a th:href="@{/blogs/{id}(id=${blog.id})}" th:text="${blog.title}"></a>
-          </li>
-        </ul>
+      <h1 class="text-2xl font-bold text-gray-800 mb-4 text-center">Welcome to My Blog App!</h1>
   </section>
   <!-- <script layout:fragment="extraScripts" th:src="@{/js/home.js}"></script> -->
 </body>
